--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -188,7 +188,7 @@
             android:id="@+id/textView2"
             android:layout_above="@+id/rowButton"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentStart="false"
             android:layout_marginLeft="699dp"
             android:layout_marginStart="699dp" />
 
