--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -15,6 +15,13 @@
         android:theme="@style/AppTheme.AppBarOverlay"
         android:id="@+id/idCustomView">
 
+        <!--<android.support.v7.widget.Toolbar
+            android:id="@+id/idToolbarEdit1"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />-->
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/idToolbarEdit1"
             android:layout_width="match_parent"
@@ -97,7 +104,10 @@
     android:layout_alignParentStart="true"
     android:layout_alignParentRight="true"
     android:layout_alignParentEnd="true"
-    android:singleLine="true"/>
+    android:singleLine="true"
+    android:autoText="true"
+    android:backgroundTintMode="screen"
+    android:text="User"/>
 
 <TextView
     android:layout_width="wrap_content"
@@ -133,7 +143,9 @@
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
     android:layout_alignRight="@+id/editTextUsername"
-    android:layout_alignEnd="@+id/editTextUsername" />
+    android:layout_alignEnd="@+id/editTextUsername"
+    android:autoText="false"
+    android:text="123456789"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -238,13 +250,6 @@
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
     android:layout_below="@+id/editTextVerifyPassword" />-->
-    <WebView
-        android:id="@+id/webview"
-        android:scrollbars="vertical"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
 
 </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
